--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
----
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
-author_profile: true
----
+version https://git-lfs.github.com/spec/v1
+oid sha256:24a1ec8bcb637462845d3fbf6595267c856b981a3182d097c266d3d5faefc557
+size 241
